--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,15 @@
   --color-gray: #d1d1d1;
   --color-text: #22243b;
   --color-accent: #f16e03;
+  --color-scrollbar: #aaa7a7;
+
+}
+
+html.dark {
+  --color-bg-dark: #1a1c35;
+  --color-bg: #22243b;
+  --color-gray: #4e4e4e;
+  --color-text: #fdfffd;
 
 }
 
@@ -24,6 +33,8 @@ body {
   /* 수직의 중간으로 위치 */
   background: rgb(2, 0, 36);
   background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 25%, rgba(0, 212, 255, 1) 79%);
+  accent-color: var(--color-accent);
+  /* 기본 UI에 우리의 accent-color 를 쓰도록 하는 것 => 여기서는 checkbox 안의 색깔을 바꾸기 위해서 사용 */
 }
 
 #root {
@@ -53,4 +64,20 @@ code {
 ul {
   list-style-type: none;
   padding-left: 0px;
+}
+
+::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--color-bg-dark);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--color-scrollbar);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--color-accent);
 }
